WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127734
Lots of varied and random crashes on the scrolling thread (ScrollbarPainters are going away)
https://bugs.webkit.org/show_bug.cgi?id=127734
Summary
Lots of varied and random crashes on the scrolling thread (ScrollbarPainters ...
Tim Horton
Reported
2014-01-27 17:09:55 PST
My ScrollbarPainters are going away on a regular basis, but they shouldn't be. smfr thinks ScrollingStateScrollingNode should retain them while it's got them, and that does preliminarily seem to help. <
rdar://problem/15906263
>
Attachments
patch
(1.95 KB, patch)
2014-01-27 22:30 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-01-27 22:30:26 PST
Created
attachment 222403
[details]
patch
WebKit Commit Bot
Comment 2
2014-01-27 23:11:42 PST
Comment on
attachment 222403
[details]
patch Clearing flags on attachment: 222403 Committed
r162915
: <
http://trac.webkit.org/changeset/162915
>
WebKit Commit Bot
Comment 3
2014-01-27 23:11:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug