Lots of varied and random crashes on the scrolling thread (ScrollbarPainters are going away) https://bugs.webkit.org/show_bug.cgi?id=127734 <rdar://problem/15906263>

Reviewed by Simon Fraser.

* page/scrolling/ScrollingStateScrollingNode.h:
Retain the ScrollbarPainters in the scrolling state tree.


Canonical link: https://commits.webkit.org/145759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162915 268f45cc-cd09-0410-ab3c-d52691b4dbfc